spade-tests/src/snapshots/spade_tests__ast_lowering__implicit_visibility_works.snap
---
source: spade-tests/src/ast_lowering.rs
---
mod a {
    mod secret {}
}

mod b {
    use super::a::secret; // this will fail
}


error: secret is private
  ┌─ testinput:6:9
  │
2 │     mod secret {}
  │         ------ The inaccessible item is defined here
  ·
6 │     use super::a::secret; // this will fail
  │         ^^^^^^^^^^^^^^^^
  │         │         │
  │         │         this item is not inaccessible from the current namespace
  │         private item
  │
  = note: consider using `pub` to alter its visibility
